--- a/platforms/zenoh-nostd-wasm/justfile
+++ b/platforms/zenoh-nostd-wasm/justfile
@@ -1,8 +1,15 @@
 clippy:
-    RUSTFLAGS='--cfg getrandom_backend="wasm_js"' cargo clippy --features='zenoh-nostd/web_console' --target wasm32-unknown-unknown
-    RUSTFLAGS='--cfg getrandom_backend="wasm_js"' cargo clippy --examples --features='zenoh-nostd/web_console' --target wasm32-unknown-unknown
+    RUSTFLAGS='--cfg getrandom_backend="wasm_js"' cargo clippy --features='yawc zenoh-nostd/web_console' --target wasm32-unknown-unknown
+    RUSTFLAGS='--cfg getrandom_backend="wasm_js"' cargo clippy --no-default-features --features='async_wsocket zenoh-nostd/web_console' --target wasm32-unknown-unknown
+    RUSTFLAGS='--cfg getrandom_backend="wasm_js"' cargo clippy --examples --features='yawc zenoh-nostd/web_console' --target wasm32-unknown-unknown
+    RUSTFLAGS='--cfg getrandom_backend="wasm_js"' cargo clippy --examples --no-default-features --features='async_wsocket zenoh-nostd/web_console' --target wasm32-unknown-unknown
 
 wasm example *args:
-    RUSTFLAGS='--cfg getrandom_backend="wasm_js"' cargo build --example {{example}} --features='zenoh-nostd/web_console' --target wasm32-unknown-unknown -- {{args}}
+    RUSTFLAGS='--cfg getrandom_backend="wasm_js"' cargo build --example {{example}} --features='yawc zenoh-nostd/web_console' --target wasm32-unknown-unknown -- {{args}}
+    wasm-bindgen --target web --out-dir web/ ../../target/wasm32-unknown-unknown/debug/examples/{{example}}.wasm --out-name z_example
+    basic-http-server web
+
+wasm1 example *args:
+    RUSTFLAGS='--cfg getrandom_backend="wasm_js"' cargo build --example {{example}} --no-default-features --features='async_wsocket zenoh-nostd/web_console' --target wasm32-unknown-unknown -- {{args}}
     wasm-bindgen --target web --out-dir web/ ../../target/wasm32-unknown-unknown/debug/examples/{{example}}.wasm --out-name z_example
     basic-http-server web
