--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = ["crates/zenoh-derive","crates/zenoh-nostd", "crates/zenoh-proto", "crates/zenoh-sansio"]
-exclude = ["platforms/zenoh-std", "platforms/zenoh-embassy"]
+exclude = ["platforms/zenoh-std", "platforms/zenoh-embassy", "platforms/zenoh-wasm"]
 
 [workspace.package]
 authors = []
@@ -63,7 +63,7 @@ readme.workspace = true
 default = ["std", "log"]
 log = ["zenoh-nostd/log"]
 defmt = ["zenoh-nostd/defmt"]
-web_console = ["dep:web-sys"] # Use `web-sys` crate for logging in webassembly
+web_console = ["zenoh-nostd/web_console"]
 std = [
     "dep:zenoh-std",
     "dep:env_logger",
@@ -84,14 +84,12 @@ esp32s3 = [
     "dep:esp-radio",
 ]
 wasm = [
-    "web_console",
-    "dep:zenoh-nostd-wasm",
-    "dep:getrandom",
+    "getrandom/std",
+    "getrandom/js",
     "dep:env_logger",
-    "dep:embassy-net",
-    "embassy-executor/arch-std",
+    "embassy-executor/arch-wasm",
     "embassy-executor/executor-thread",
-    "embassy-time/std",
+    "embassy-time/wasm",
     "dep:critical-section",
 ]
 
@@ -101,10 +99,11 @@ static_cell = { workspace = true }
 embassy-sync = { workspace = true  }
 embassy-executor = { workspace = true }
 embassy-time = { workspace = true }
+embassy-futures = { workspace = true }
 
 zenoh-std = { version = "0.1.0", path = "platforms/zenoh-std", optional = true }
 zenoh-embassy = { version = "0.1.0", path = "platforms/zenoh-embassy", optional = true }
-zenoh-nostd-wasm = { version = "0.1.0", path = "platforms/zenoh-nostd-wasm", optional = true }
+zenoh-wasm = { version = "0.1.0", path = "platforms/zenoh-wasm", optional = true }
 
 critical-section = { version = "1.2", features = ["std"], optional = true }
 env_logger = { version = "0.10", optional = true}
@@ -117,8 +116,7 @@ esp-alloc = { version = "0.9.0", features = ["defmt"], optional = true }
 esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"], optional = true }
 esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio", "embassy"], optional = true }
 esp-radio = { version = "0.17.0", features = ["unstable", "defmt", "esp-alloc", "esp32s3", "smoltcp", "wifi"], optional = true }
-
-web-sys = { version = "0.3.82", features = ["console"], optional = true }
+wasm-bindgen = "0.2.105"
 
 [profile.dev]
 opt-level = "s"
