--- a/platforms/zenoh-std/Cargo.toml
+++ b/platforms/zenoh-std/Cargo.toml
@@ -12,7 +12,8 @@ version = "0.1.0"
 
 [dependencies]
 zenoh-nostd = { version = "0.1.0", path = "../../crates/zenoh-nostd" }
-
+yawc = {git = "https://github.com/infinitefield/yawc", branch = "master"}
 async-net = { version = "2.0.0" }
 socket2 = { version = "0.6.0", features = ["all"] }
 futures-lite = { version = "2.6.1" }
+futures-util = "0.3"
