--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = ["crates/zenoh-derive","crates/zenoh-nostd", "crates/zenoh-proto", "crates/zenoh-sansio"]
-exclude = ["platforms/zenoh-std", "platforms/zenoh-embassy", "platforms/zenoh-wasm", "platforms/wtx_test"]
+exclude = ["platforms/zenoh-std", "platforms/zenoh-embassy", "platforms/zenoh-wasm"]
 
 [workspace.package]
 authors = []
@@ -84,6 +84,7 @@ esp32s3 = [
     "dep:esp-radio",
 ]
 wasm = [
+    "dep:zenoh-wasm",
     "getrandom/std",
     "getrandom/js",
     "dep:env_logger",
