--- a/crates/zenoh-proto/Cargo.toml
+++ b/crates/zenoh-proto/Cargo.toml
@@ -31,3 +31,13 @@ web-sys = { workspace = true, optional = true }
 rand.workspace = true
 paste.workspace = true
 criterion.workspace = true
+
+[[example]]
+name = "z_flood"
+path = "examples/z_flood.rs"
+required-features = ["std"]
+
+[[example]]
+name = "z_drain"
+path = "examples/z_drain.rs"
+required-features = ["std"]
