--- a/crates/zenoh-proto/Cargo.toml
+++ b/crates/zenoh-proto/Cargo.toml
@@ -23,6 +23,8 @@ web_console = ["std", "dep:web-sys"]
 [dependencies]
 zenoh-derive.workspace = true
 uhlc.workspace = true
+borrow.workspace = true
+
 log = { workspace = true, optional = true }
 defmt = { workspace = true, optional = true }
 web-sys = { workspace = true, optional = true }
