WIP TransportTx rework to be more easy to use in some cases

--- a/crates/zenoh-proto/Cargo.toml
+++ b/crates/zenoh-proto/Cargo.toml
@@ -33,12 +33,12 @@ rand.workspace = true
 paste.workspace = true
 criterion.workspace = true
 
-[[example]]
-name = "z_flood"
-path = "examples/z_flood.rs"
-required-features = ["std"]
+# [[example]]
+# name = "z_flood"
+# path = "examples/z_flood.rs"
+# required-features = ["std"]
 
-[[example]]
-name = "z_drain"
-path = "examples/z_drain.rs"
-required-features = ["std"]
+# [[example]]
+# name = "z_drain"
+# path = "examples/z_drain.rs"
+# required-features = ["std"]
