--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ zenoh-nostd = { version = "0.1.0", path = "crates/zenoh-nostd" }
 
 # General dependencies
 
-uhlc = { version = "0.9.0", git = "https://github.com/atolab/uhlc-rs", default-features = false }
+uhlc = { version = "0.9.0", default-features = false }
 sha3 = { version = "0.10.8", default-features = false }
 dyn-utils = { version = "0.1.0", git = "https://github.com/wyfo/dyn-utils", default-features = false, features = ["macros"]}
 
