--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ zenoh-nostd = { version = "0.1.0", path = "crates/zenoh-nostd" }
 
 uhlc = { version = "0.9.0", default-features = false }
 sha3 = { version = "0.10.8", default-features = false }
-dyn-utils = { version = "0.1.0", git = "https://github.com/wyfo/dyn-utils", default-features = false, features = ["macros"]}
+dyn-utils = { version = "0.1.0", git = "https://github.com/wyfo/dyn-utils", default-features = false, features = ["macros", "const_panic"]}
 
 # Embassy (for async/await support)
 embassy-futures = "0.1.2"
